# GD

./: CMakeLists.txt  README.md
.github/workflows/: hw1.yml  try-again.yml
1.hello_world/: CMakeLists.txt
1_hello_world/hello-lib/hello_bin/src/: main.cxx
1_hello_world/hello-lib/hello_lib/include/: greeting.hxx
2.sdl/dynamic/: CMakeLists.txt
2.sdl/static/: CMakeLists.txt  main.cxx
2_sdl/dynamic/: main.cxx
3.engine/1.sdl_loop/: CMakeLists.txt  main.cxx
3.engine/2.loop_to_engine/: CMakeLists.txt  engine.cxx  engine.hxx  main.cxx
3.engine/3.loop_to_engine_dll/: CMakeLists.txt  engine.cxx  engine.hxx  game.cxx
3.engine/4.sdl_loop_hot_reload/: CMakeLists.txt  engine.cxx  engine.hxx  game.cxx
SDL/dynamic/: CMakeLists.txt
SDL/static/: CMakeLists.txt
hello-lib/: CMakeLists.txt
hello-lib/hello_bin/: CMakeLists.txt
hello-lib/hello_lib/: CMakeLists.txt
hello-lib/hello_lib/src/: greeting.cxx
hello_world/: README.md
hello_world/hello-lib/hello_bin/: CMakeLists.txt
hello_world/simple-hello/: CMakeLists.txt  main.cpp
